@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-07T01:11:52Z",
+  "timestamp" : "2022-06-07T16:22:36Z",
   "count_outdated" : 324,
   "uniques_outdated" : 181,
-  "count" : 345,
-  "uniques" : 196,
+  "count" : 346,
+  "uniques" : 197,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-06-06T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
