@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 6,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-06-06T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
